<?xml version="1.0" encoding="UTF-8"?>
<project>
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.coreoz</groupId>
	<artifactId>plume-showcase</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>plume-showcase</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<plume-dependencies.version>4.3.4</plume-dependencies.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.0.2</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>com.coreoz.WebApplication</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<!-- build a zip with all the dependencies and starting scripts -->
			<plugin>
				<groupId>com.google.code.play2-maven-plugin</groupId>
				<artifactId>play2-maven-plugin</artifactId>
				<version>1.0.0-rc5</version>
				<executions>
					<execution>
						<goals>
							<goal>dist</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jul-to-slf4j</artifactId>
		</dependency>

		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
		</dependency>
		<!-- allow to use Guice dependency injection in Jersey controllers -->
		<dependency>
			<groupId>org.glassfish.hk2</groupId>
			<artifactId>guice-bridge</artifactId>
			<exclusions>
				<exclusion>
					<artifactId>guice</artifactId>
					<groupId>com.google.inject</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.coreoz</groupId>
			<artifactId>plume-conf</artifactId>
		</dependency>

		<!-- database -->
		<dependency>
			<groupId>com.coreoz</groupId>
			<artifactId>plume-db-querydsl</artifactId>
		</dependency>
		<dependency>
			<groupId>com.coreoz</groupId>
			<artifactId>plume-db-querydsl-codegen</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
		</dependency>

		<!-- jersey -->
		<dependency>
			<groupId>com.coreoz</groupId>
			<artifactId>plume-web-jersey</artifactId>
		</dependency>
		<dependency>
			<groupId>com.coreoz</groupId>
			<artifactId>plume-web-jersey-monitoring</artifactId>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.containers</groupId>
			<artifactId>jersey-container-grizzly2-http</artifactId>
		</dependency>

		<!-- to cool down eclipse  -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>

		<!-- swagger -->
		<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-jaxrs2</artifactId>
		</dependency>
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>swagger-ui</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- plume admin -->
		<dependency>
			<groupId>com.coreoz</groupId>
			<artifactId>plume-admin-ws</artifactId>
		</dependency>
		<dependency>
			<groupId>com.coreoz</groupId>
			<artifactId>plume-admin-ws-system</artifactId>
		</dependency>
		<dependency>
			<groupId>com.coreoz</groupId>
			<artifactId>plume-admin-api-log</artifactId>
		</dependency>

		<!-- unit testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.coreoz</groupId>
			<artifactId>plume-db-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.coreoz</groupId>
				<artifactId>plume-dependencies</artifactId>
				<version>${plume-dependencies.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
